# neural-net-cpp

./: .gitignore  CMakeLists.txt  CSVReader.cpp  CSVReader.h  FeatureScaler.cpp  FeatureScaler.h  Layer.cpp  NeuralNetwork.cpp  NeuralNetwork.h  README.md  Utility.cpp  Utility.h  generate_data.ipynb  main.cpp
